--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
     "com.unity.visualscripting": "1.9.0",
+    "com.unity.xr.hands": "1.3.0",
     "com.unity.xr.management": "4.4.0",
     "com.unity.xr.openxr": "1.8.2",
     "com.unity.modules.ai": "1.0.0",
